# telegram_bot

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  MEMORIES.md  PLAN.md  README.md  TODO.md  USER.md  config.toml.example  git-sync.bat  git-sync.sh  index.html  landing-page.html  todo.html
.github/workflows/: daily-build.yml
.skills/capt-jack/: SKILL.md
.skills/create-skill/: SKILL.md
.skills/create-website/: SKILL.md
.skills/git-sync/: SKILL.md
.skills/system-info/: SKILL.md
docs/: en.html  index.html  ja.html  ko.html
src/: bot.rs  cli.rs  init.rs  main.rs  run.rs  runner.rs  serve.rs
src/agent/: agent.rs  mcp.rs  mod.rs  specialists.rs  utils.rs
src/agent/create_skill_tool/: mod.rs
src/agent/system_info_tool/: mod.rs
src/agent/tools/: mod.rs
src/modes/: bot.rs  cli.rs  init.rs  mod.rs  run.rs
src/tools/: mod.rs
src/tools/create_skill/: mod.rs
src/tools/current_datetime/: mod.rs
src/tools/filesystem/: mod.rs
src/tools/parallel_tasks/: mod.rs
src/tools/parallel_writer/: mod.rs
src/tools/search/: mod.rs
src/tools/shell/: mod.rs
src/tools/soul/: mod.rs
src/tools/system_info/: mod.rs
src/tools/system_status/: mod.rs
src/tools/todo/: mod.rs
src/tools/wiki/: mod.rs
workspace/: todos.json
workspace/.skills/book-mockup/: SKILL.md  requirements.txt
workspace/.skills/cli-help/: SKILL.md
workspace/.skills/create-ebook/: README.md
workspace/.skills/create-epub/: SKILL.md
workspace/.skills/create-infographic/: SKILL.md
workspace/.skills/create-pdf/: SKILL.md
workspace/.skills/create-website/: SKILL.md
(+17 files in other folders)
