[package]
name = "namiclaw"
version = "0.5.0"
edition = "2024"

[dependencies]
adk-rust = { version = "0.7.0", features = ["openrouter"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1"

reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"

teloxide = { version = "0.17.0", features = ["macros"] }
adk-session = { version = "0.7.0", features = ["sqlite"] }
adk-tool = "0.7.0"
adk-runner = "0.7.0"
urlencoding = "2.1.3"
pretty_env_logger = "0.5.0"
futures = "0.3.32"

dirs = "6.0.0"
clap = { version = "4.6.1", features = ["derive"] }
async-trait = "0.1.89"
zerocopy = { version = "0.8.48", features = ["derive"] }
log = "0.4.29"
sysinfo = "0.33.1"
termimad = "0.34.1"
rustyline = "18.0.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.32"
regex = "1.10.4"
chrono = "0.4.38"
walkdir = "2.5.0"
yaml-rust = "0.4.5"
serde_yaml = "0.9.34"
indexmap = "2.14.0"
toml = "1.1.2"
